--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
 
 
         <section>
-            <div class="info-container">
-                <div class="newsletter-container wrapper ">
+            <div class="info-container clearfix">
+                <div class="newsletter-container  body-text">
                     <h3 class="to-upper">
                         stay updated
                     </h3>
-                    <p class="body-text">Subscribe to our newsletter to stay updated</p>
+                    <p>Subscribe to our newsletter to stay updated</p>
                     <form action="">
                         <label for="email" class="visuallyHidden">Email address</label>
                         <input type="email" id="email" name="email" placeholder="email address">
                         <button type="submit">Subscribe</button>
                     </form>
                 </div>
-                <section class=" wrapper contact-links-container">
-                    <div class="contact-info-container">
+                <section class=" contact-links-container clearfix">
+                    <div class="contact-info-container body-text">
                         <h3 class="to-upper">
                             contact
                         </h3>
                         <p>info@email.com | 123 - 456 - 7890 <br> 123 some road, Toronto, <span
                                 class="to-upper">on</span> <br> A5A 5A5, Canada</p>
                     </div>
-                    <ul>
+                    <ul class="body-text">
                         <li class="footer-links to-upper">
                             <a href="">home</a>
                         </li>
