Finalized Desktop Design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section>
-            <h1 class="to-upper news-heading heading-text">news articles</h1>
+            <h2 class="to-upper news-heading heading-text">news articles</h1>
             <div class="wrapper">
                 <ul class="clearfix news-gallery">
                     <li><img src="./assets/one-closet-missing.jpg"
@@ -72,7 +72,7 @@
         <section class=" ">
             <div class="featured-1 clearfix">
                 <div class="featured-text left-text">
-                    <h1 class="to-upper heading-text">new trends to look out for</h1>
+                    <h2 class="to-upper">new trends to look out for</h1>
                     <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
                         nostrum
                         nesciunt! Repellendus illum suscipit voluptatum mollitia exercitationem. Quidem.</p>
@@ -89,7 +89,7 @@
                     <img src="./assets/image-2.jpg" alt="close headshot of model wearing dark green scarf">
                 </div>
                 <div class="featured-text right-text">
-                    <h1 class="to-upper heading-text">new trends to look out for</h1>
+                    <h2 class="to-upper">new trends to look out for</h1>
                     <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
                         nostrum
                         nesciunt!
@@ -108,60 +108,58 @@
             <div class="badge-container wrapper clearfix">
                 <div class="badge">
                     <i class="fas fa-shopping-bag"></i>
-                    <h2 class="heading-text to-upper">shop brands</h2>
+                    <h2 class="to-upper">shop brands</h2>
                 </div>
                 <div class="badge">
                     <i class="fas fa-users"></i>
-                    <h2 class="heading-text to-upper">community</h2>
+                    <h2 class="to-upper">community</h2>
                 </div>
                 <div class="badge">
                     <i class="fas fa-calendar-check"></i>
-                    <h2 class="heading-text to-upper">events</h2>
+                    <h2 class="to-upper">events</h2>
                 </div>
             </div>
         </section>
 
-
-        <section>
-            <div class="info-container clearfix">
-                <div class="newsletter-container  body-text">
-                    <h3 class="to-upper">
-                        stay updated
-                    </h3>
-                    <p>Subscribe to our newsletter to stay updated</p>
-                    <form action="">
-                        <label for="email" class="visuallyHidden">Email address</label>
-                        <input type="email" id="email" name="email" placeholder="email address">
-                        <button type="submit">Subscribe</button>
-                    </form>
-                </div>
-                <section class=" contact-links-container clearfix">
-                    <div class="contact-info-container body-text">
-                        <h3 class="to-upper">
-                            contact
-                        </h3>
-                        <p>info@email.com | 123 - 456 - 7890 <br> 123 some road, Toronto, <span
-                                class="to-upper">on</span> <br> A5A 5A5, Canada</p>
-                    </div>
-                    <ul class="body-text">
-                        <li class="footer-links to-upper">
-                            <a href="">home</a>
-                        </li>
-                        <li class="footer-links to-upper">
-                            <a href="">about</a>
-                        </li>
-                        <li class="footer-links to-upper">
-                            <a href="">blog</a>
-                        </li>
-                        <li class="footer-links to-upper">
-                            <a href="">contact</a>
-                        </li>
-                    </ul>
-                </section>
-                <div class="copyright-container">
-                    <p class="wrapper">Copyright &#xa9; 2019 HackerYou</p>
-                </div>
+        <section class="info-container clearfix">
+            <div class="newsletter-container  body-text">
+                <h3 class="to-upper">
+                    stay updated
+                </h3>
+                <p>Subscribe to our newsletter to stay updated.</p>
+                <form action="">
+                    <label for="email" class="visuallyHidden">Email address</label>
+                    <input class="body-text" type="email" id="email" name="email" placeholder="email address"><button
+                        class="subscribe to-upper" type="submit">Subscribe</button>
+                </form>
             </div>
+            <div class=" contact-links-container clearfix">
+                <div class="contact-info-container body-text">
+                    <h3 class="to-upper">
+                        contact
+                    </h3>
+                    <p>info@email.com | 123 - 456 - 7890 <br> 123 some road, Toronto, <span class="to-upper">on</span>
+                        <br> A5A 5A5, Canada</p>
+                </div>
+                <ul class="body-text">
+                    <li class="footer-links to-upper">
+                        <a href="">home</a>
+                    </li>
+                    <li class="footer-links to-upper">
+                        <a href="">about</a>
+                    </li>
+                    <li class="footer-links to-upper">
+                        <a href="">blog</a>
+                    </li>
+                    <li class="footer-links to-upper">
+                        <a href="">contact</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="copyright-container body-text">
+            <p class="wrapper">Copyright &#xa9; 2019 HackerYou</p>
         </section>
 
 
