updated mobile query for header and articles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <nav class="wrapper">
             <p class="logo heading-text to-upper">one</p>
+            <i class="fas fa-bars hamburger-menu"></i>
             <ul class="nav-link-ul clearfix">
                 <li class="to-upper body-text nav-links"><a href=""><span>home</span></a></li>
                 <li class="to-upper body-text nav-links"><a href=""><span>about</span></a></li>
@@ -71,15 +72,15 @@
 
         <section class=" ">
             <div class="featured-1 clearfix">
+                <div class="featured-image right-image">
+                    <img src="./assets/image-5.jpg" alt="close headshot of model wearing dark green scarf">
+                </div>
                 <div class="featured-text left-text">
                     <h2 class="to-upper">new trends to look out for</h1>
                     <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
                         nostrum
                         nesciunt! Repellendus illum suscipit voluptatum mollitia exercitationem. Quidem.</p>
                     <a href="" class="buttons button-text to-upper">read more</a>
-                </div>
-                <div class="featured-image right-image">
-                    <img src="./assets/image-5.jpg" alt="close headshot of model wearing dark green scarf">
                 </div>
             </div>
 
