finished mobile view

--- a/index.html
+++ b/index.html
@@ -20,56 +20,54 @@
                 <li class="to-upper body-text nav-links"><a href=""><span>contact</span></a></li>
             </ul>
         </nav>
-
         <h1 class="to-upper header-title"> <span class="h1-one">one </span> <br> magazine</h1>
-
         <ul class="social-bar">
             <li class="button-text"><a href=""><i class="fab fa-instagram"></i></a></li>
             <li class="button-text"><a href=""><i class="fab fa-facebook-f"></i></a></li>
             <li class="button-text"><a href=""><i class="fab fa-snapchat-ghost"></i></a></li>
             <li class="button-text"><a href=""><i class="fab fa-twitter"></i></a></li>
         </ul>
-
     </header>
+
     <main>
         <section>
             <h2 class="to-upper news-heading heading-text">news articles</h1>
-            <div class="wrapper">
-                <ul class="clearfix news-gallery">
-                    <li><img src="./assets/one-closet-missing.jpg"
-                            alt="two models walking in white heels wearing light green and sky blue coloured dress">
-                    </li>
-                    <li>
-                        <img src="./assets/image-3.jpg" alt="portrait photo of male model looking at viewer">
-                    </li>
-                    <li>
-                        <img src="./assets/image-4.jpg"
-                            alt="photographer taking picture of two models wearing white dress">
-                    </li>
-                </ul>
-
-                <div class="highlight-container clearfix">
-                    <div class="highlight-image">
-                        <img src="./assets/image-6.jpg"
-                            alt="model wearing patterned shirt over black long sleeve shirt drinking beverage from tea cup at cafe">
-                    </div>
-                    <div class="highlight-text">
-                        <h2 class="to-upper heading-text">this weeks highlight</h2>
-                        <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur modi
-                            dolore ut ducimus
-                            officiis nulla vitae nisi
-                            voluptas quisquam nihil laboriosam itaque eos exercitationem rerum dicta voluptatem, quo
-                            aspernatur assumenda. Lorem
-                            ipsum dolor sit amet, consectetur adipisicing elit. Quasi delectus recusandae maxime eum,
-                            dolorum, vel in ipsam
-                            pariatur omnis esse sunt minus aspernatur itaque saepe. Magni facilis cupiditate cumque
-                            provident.</p>
-                        <a href="" class="buttons button-text to-upper">read more</a>
+                <div class="wrapper">
+                    <ul class="clearfix news-gallery">
+                        <li><img src="./assets/one-closet-missing.jpg"
+                                alt="two models walking in white heels wearing light green and sky blue coloured dress">
+                        </li>
+                        <li>
+                            <img src="./assets/image-3.jpg" alt="portrait photo of male model looking at viewer">
+                        </li>
+                        <li>
+                            <img src="./assets/image-4.jpg"
+                                alt="photographer taking picture of two models wearing white dress">
+                        </li>
+                    </ul>
+                    <div class="highlight-container clearfix">
+                        <div class="highlight-image">
+                            <img src="./assets/image-6.jpg"
+                                alt="model wearing patterned shirt over black long sleeve shirt drinking beverage from tea cup at cafe">
+                        </div>
+                        <div class="highlight-text">
+                            <h2 class="to-upper heading-text">this weeks highlight</h2>
+                            <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                                modi
+                                dolore ut ducimus
+                                officiis nulla vitae nisi
+                                voluptas quisquam nihil laboriosam itaque eos exercitationem rerum dicta voluptatem, quo
+                                aspernatur assumenda. Lorem
+                                ipsum dolor sit amet, consectetur adipisicing elit. Quasi delectus recusandae maxime
+                                eum,
+                                dolorum, vel in ipsam
+                                pariatur omnis esse sunt minus aspernatur itaque saepe. Magni facilis cupiditate cumque
+                                provident.</p>
+                            <a href="" class="buttons button-text to-upper">read more</a>
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
-
         <section class=" ">
             <div class="featured-1 clearfix">
                 <div class="featured-image right-image">
@@ -77,34 +75,29 @@
                 </div>
                 <div class="featured-text left-text">
                     <h2 class="to-upper">new trends to look out for</h1>
-                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
-                        nostrum
-                        nesciunt! Repellendus illum suscipit voluptatum mollitia exercitationem. Quidem.</p>
-                    <a href="" class="buttons button-text to-upper">read more</a>
+                        <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
+                            nostrum
+                            nesciunt! Repellendus illum suscipit voluptatum mollitia exercitationem. Quidem.</p>
+                        <a href="" class="buttons button-text to-upper">read more</a>
                 </div>
             </div>
-
-
             <div class="featured-2 clearfix">
                 <div class="featured-image left-image">
                     <img src="./assets/image-2.jpg" alt="close headshot of model wearing dark green scarf">
                 </div>
                 <div class="featured-text right-text">
                     <h2 class="to-upper">new trends to look out for</h1>
-                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
-                        nostrum
-                        nesciunt!
-                        Repellendus illum suscipit voluptatum mollitia exercitationem. Quidem.</p>
-                    <a href="" class="buttons button-text to-upper">read more</a>
+                        <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rem ratione
+                            nostrum
+                            nesciunt!
+                            Repellendus illum suscipit voluptatum mollitia exercitationem. Quidem.</p>
+                        <a href="" class="buttons button-text to-upper">read more</a>
                 </div>
             </div>
-
-
         </section>
-
     </main>
-    <footer>
 
+    <footer>
         <section class="banner">
             <div class="badge-container wrapper clearfix">
                 <div class="badge">
@@ -158,12 +151,9 @@
                 </ul>
             </div>
         </section>
-
         <section class="copyright-container body-text">
             <p class="wrapper">Copyright &#xa9; 2019 HackerYou</p>
         </section>
-
-
     </footer>
     </body>
 
